<resources>
    <string name="app_name">FamilyAfterWork</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="background_color">Background color</string>
    <string name="about">About</string>
    <string name="take_photo">Take photo</string>
    <string name="photos_collection">Photos collection</string>
    <string name="photo">photo</string>
    <string name="increase_transparency">+ Increase transparency</string>
    <string name="decrease_transparency">- Decrease transparency</string>
    <string name="changelog">Changelog</string>
    <string name="show_app_version">Show app version</string>

    <string name="this_application_was_created_by">This application was created by...</string>
    <string name="share">Share</string>
    <string name="events">Events</string>
    <string name="family">Family</string>
    <string name="item_image_description">Image Description</string>
    <string name="item_title">Item Title</string>
    <string name="item_detail">Item Detail</string>
    <string name="button_add_event">Add event</string>
    <string name="event_name_hint">Event Name</string>
    <string name="event_date_hint">Event Date</string>
    <string name="event_time_hint">Event Time</string>
    <string name="description_hint">Description</string>
    <string name="guardian_hint">Guardian</string>
    <string name="child_hint">Child</string>
    <string name="save_event_btn">Save Event</string>
    <string name="button_add_family">Add Family Member</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_member">Edit Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="btnEditEvent">Edit</string>
    <string name="btnDeleteEvent">Delete</string>
    <string name="btnEditMember">Edit</string>
    <string name="btnDeleteMember">Delete</string>
    <string name="no_match_found">No Match Found for this ID</string>
    <string name="item_role">Role of member</string>
    <string name="member_name_hint">Member Name</string>
    <string name="member_role_hint">Member Role</string>
    <string name="member_icon">Member Icon</string>
    <string name="save_member_btn">Save Member</string>
</resources>