<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editMemberName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_name_hint" />

    <EditText
        android:id="@+id/editAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_role_hint" />

    <EditText
        android:id="@+id/editImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member_icon" />


    <Button
        android:id="@+id/btnSaveFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_member_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>
</LinearLayout>
