<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editMemberName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint" />

    <EditText
        android:id="@+id/editAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_date_hint" />

    <EditText
        android:id="@+id/editImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_time_hint" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btnEditMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEditMember"
            app:layout_constraintEnd_toStartOf="@+id/btnDeleteMember"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDeleteMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeleteMember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEditMember"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
